--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Home Page</title>
     <link rel="stylesheet" href="styleHP.css">
-
     <style>
         body {
             background-color: black;
@@ -12,6 +11,9 @@
 </head>
 
 <body onload="main()">
+    <header>
+        <strong><em>WebGL</em> Work</strong>
+    </header>
     <div class="container flex-direction">
         <div class="project">
             <canvas id="webgl" width="600" height="600"></canvas>
@@ -21,23 +23,32 @@
         <div class="divLeft">
             <div class="div2">
                 <h2 class="fontDiv01">How to Play/Control</h2>
-                <li class="fontDiv02">Press "w/a/s/d" keys to move.</li>
-                <li class="fontDiv02">Drag your mouse to rotate your perspective.</li>
-                <li class="fontDiv02">Press "p" if you want to switch to a third-person perspective.</li>
-                <li class="fontDiv02">Press "p" again if you want to change back.</li>
-                <p class="fontDiv02">wasd移動，滑鼠拖移旋轉身體and旋轉視角，「p」切換一三人稱視角。</p>
+                <ul>
+                    <li class="fontDiv02">Press "w/a/s/d" keys to move.</li>
+                    <li class="fontDiv02">Drag your mouse to rotate your perspective.</li>
+                    <li class="fontDiv02">Press "p" if you want to switch to a third-person perspective.</li>
+                    <li class="fontDiv02">Press "p" again if you want to change back.</li>
+                    <p class="fontDiv02">wasd移動，滑鼠拖移旋轉身體and旋轉視角，「p」切換一三人稱視角。</p>
+                </ul>
+
             </div>
 
             <div class="divLeft2">
                 <a href="profile.html">
-                    <div id="pic">
+                    <div class="pic">
                         <img src="fish.jpg" alt="LION" style="width: 150px" class="rect" />
                     </div>
                 </a>
                 <div class="divLeft3">
                     <h3 class="fontDiv01">Author- Kaili Chang</h3>
-                    <h5 class="fontDiv01">GO TO -> <a href="https://byehomezzz.wixsite.com/portfolio">Portfolio Website</a></h5>
-                    <h5 class="fontDiv01">GO TO -> <a href="profile.html">Easy Version Resume</a></h5>
+                    <h5 class="fontDiv01">
+                        <h5 class="goTo">GO TO -></h5>
+                        <a href="https://byehomezzz.wixsite.com/portfolio">Portfolio Website</a>
+                    </h5>
+                    <h5 class="fontDiv01">
+                        <h5 class="goTo">GO TO -></h5>
+                        <a href="profile.html">Easy Version Resume</a>
+                    </h5>
                 </div>
 
             </div>
